fix order of colors for floating point (it is worth to note that photoshop and gimp are not respecting the TIFF standard in that aspect)

BUG: 344334