krita/plugins/formats/tiff/kis_tiff_converter.cc
@@ -404,7 +404,12 @@ KisImageBuilder_Result KisTIFFConverter::readTIFFDirectory(TIFF* image)
     }
         break;
     case PHOTOMETRIC_RGB: {
-        poses[0] = 2; poses[1] = 1; poses[2] = 0; poses[3] = 3;
+        if (sampletype == SAMPLEFORMAT_IEEEFP)
+        {
+            poses[2] = 2; poses[1] = 1; poses[0] = 0; poses[3] = 3;
+        } else {
+            poses[0] = 2; poses[1] = 1; poses[2] = 0; poses[3] = 3;
+        }
         postprocessor = new KisTIFFPostProcessor(nbcolorsamples);
     }
         break;
@@ -454,26 +459,27 @@ KisImageBuilder_Result KisTIFFConverter::readTIFFDirectory(TIFF* image)
         tiffReader = new KisTIFFReaderTarget8bit(layer->paintDevice(), poses, alphapos, depth, sampletype, nbcolorsamples, extrasamplescount, transform, postprocessor);
     }
     else if (dstDepth == 16) {
-        uint16 alphValue;
-        if(sampletype == SAMPLEFORMAT_IEEEFP)
+        uint16 alphaValue;
+        if (sampletype == SAMPLEFORMAT_IEEEFP)
         {
-          float alpha = 1.0f;
-          alphValue = *(uint16*)&alpha;
+          alphaValue = 15360; // representation of 1.0 in half
         } else {
-          alphValue = quint16_MAX;
+          alphaValue = quint16_MAX;
         }
-        tiffReader = new KisTIFFReaderTarget16bit(layer->paintDevice(), poses, alphapos, depth, sampletype, nbcolorsamples, extrasamplescount, transform, postprocessor, alphValue);
+        tiffReader = new KisTIFFReaderTarget16bit(layer->paintDevice(), poses, alphapos, depth, sampletype, nbcolorsamples, extrasamplescount, transform, postprocessor, alphaValue);
     }
     else if (dstDepth == 32) {
-        uint32 alphValue;
-        if(sampletype == SAMPLEFORMAT_IEEEFP)
+        union {
+          float f;
+          uint32 i;
+        } alphaValue;
+        if (sampletype == SAMPLEFORMAT_IEEEFP)
         {
-          float alpha = 1.0;
-          alphValue = *(uint32*)&alpha;
+          alphaValue.f = 1.0f;
         } else {
-          alphValue = quint32_MAX;
+          alphaValue.i = quint32_MAX;
         }
-        tiffReader = new KisTIFFReaderTarget32bit(layer->paintDevice(), poses, alphapos, depth, sampletype, nbcolorsamples, extrasamplescount, transform, postprocessor, alphValue);
+        tiffReader = new KisTIFFReaderTarget32bit(layer->paintDevice(), poses, alphapos, depth, sampletype, nbcolorsamples, extrasamplescount, transform, postprocessor, alphaValue.i);
     }
 
     if (TIFFIsTiled(image)) {
